RESOLVED FIXED214658
[WinCairo][32bit] ConnectionWin.cpp(327): error C2664: 'BOOL RegisterWaitForSingleObject(...)': cannot convert argument 3 from 'void (__cdecl *)(...)' to 'WAITORTIMERCALLBACK'
https://bugs.webkit.org/show_bug.cgi?id=214658
Summary [WinCairo][32bit] ConnectionWin.cpp(327): error C2664: 'BOOL RegisterWaitForS...
Fujii Hironori
Reported 2020-07-22 14:51:39 PDT
[WinCairo][32bit] ConnectionWin.cpp(327): error C2664: 'BOOL RegisterWaitForSingleObject(...)': cannot convert argument 3 from 'void (__cdecl *)(...)' to 'WAITORTIMERCALLBACK' ..\..\Source\WebKit\Platform\IPC\win\ConnectionWin.cpp(327): error C2664: 'BOOL RegisterWaitForSingleObject(PHANDLE,HANDLE,WAITORTIMERCALLBACK,PVOID,ULONG,ULONG)': cannot convert argument 3 from 'void (__cdecl *)(void *,BOOLEAN)' to 'WAITORTIMERCALLBACK' ..\..\Source\WebKit\Platform\IPC\win\ConnectionWin.cpp(327): note: None of the functions with this name in scope match the target type C:\Program Files (x86)\Windows Kits\10\include\10.0.19041.0\um\winbase.h(7515): note: see declaration of 'RegisterWaitForSingleObject'
Attachments
Patch (1.54 KB, patch)
2020-07-22 14:55 PDT, Fujii Hironori
darin: review+
Fujii Hironori
Comment 1 2020-07-22 14:55:17 PDT
Fujii Hironori
Comment 2 2020-07-22 18:45:01 PDT
Radar WebKit Bug Importer
Comment 3 2020-07-22 18:45:16 PDT
Note You need to log in before you can comment on or make changes to this bug.