[WinCairo][32bit] ConnectionWin.cpp(327): error C2664: 'BOOL RegisterWaitForSingleObject(...)': cannot convert argument 3 from 'void (__cdecl *)(...)' to 'WAITORTIMERCALLBACK' https://bugs.webkit.org/show_bug.cgi?id=214658

Reviewed by Darin Adler.

__cdecl and __stdcall calling conventions don't match.
<https://docs.microsoft.com/en-us/cpp/cpp/argument-passing-and-naming-conventions>

* Platform/IPC/Connection.h: Added WINAPI to Connection::EventListener::callback method.


Canonical link: https://commits.webkit.org/227479@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264740 268f45cc-cd09-0410-ab3c-d52691b4dbfc